# RSSchemometrics

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
RSSchemometrics/: MCR.py  PCA.py  PLSDA.py  PLSLDA.py  PLSR.py  __init__.py  setup.cfg
RSSchemometrics/Plotting/: ComponentPlots.py  ExplorationPlots.py  ValidationPlots.py  __init__.py
RSSchemometrics/RSSchemometrics/Plotting/: ExplorationPlots.py  rucolors.py
RSSchemometrics/data_processing/: PreProcessing.py  SingleTestSetSplit.py  __init__.py
