[metadata]
name = RSSchemometrics
description = Chemometrics codebase for the Radboud Summer School course given by the Department of Analytical Chemistry and Chemometrics 
author = Bente van Son (Mickey Lukkien for MRC code)
licence = MIT
licence_file = LICENCE 

[options]
packages = RSSchemometrics
package_dir = RSSchemometrics